# yatc

./: .gitignore  README.md  main.py  pyproject.toml
src/models/: scraper.py
src/services/: classifier.py  scraper.py  validator.py
