[project]
name = "yatc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "bs4>=0.0.2",
    "ipykernel>=7.2.0",
    "nltk>=3.9.2",
    "pip>=26.0.1",
    "protego>=0.6.0",
    "pydantic>=2.12.5",
    "readability-lxml>=0.8.4.1",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.11",
]
